[package]
name = "exper-surrealdb-ref-records"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = { version = "2.0.0-alpha.1", path = "../surrealdb/lib", features = ["kv-mem"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
